# aav-diff-design

./: .gitattributes  .gitignore  README.md  pyproject.toml
Classifier/: explore_data.ipynb  model.py
Diffusion/: DataLoading.py  config.py  denoising.py  diffusion.py  embed_blosum.py  example.ipynb  network_modules.py  preprocess.py  schedule.py
classifier/: eval_report.py  explore_data.ipynb  model.ipynb  model.py  train.py
classifier/weights/: esm35m_b.pt
diffusion/: DataLoading.py  config.py  embed_blosum.py  example.ipynb  preprocess.py  tokenizer.py  train.py
eval/: common.py  distribution.py  diversity.py  run_all.py  scatter.py  viability.py
model/: explore.ipynb  model.py
scripts/: download_data.sh  preprocess_data.py
